# RC-Zephyr-RTOS-fw

./: .cproject  .gitignore  .project  CMakeLists.txt  CPPLINT.cfg  README.md  build-plant_led.bat  build.bat  build_posix.bat  flash.bat  git_watcher.cmake  output.pem  overlay-ncs.conf  overlay-no-flash.conf  prj.conf
.github/linters/: .jscpd.json
.github/workflows/: lint.yml  main.yml
boards/: native_posix.conf  native_posix_64.conf  nrf52_bsim.conf  particle_xenon.conf  particle_xenon.overlay
boards/arm/plant_led/: Kconfig  Kconfig.board  Kconfig.defconfig  board.c  plant_led.dts  plant_led.yaml  plant_led_defconfig
bootloader/: mcuboot-e73.hex  mcuboot-old.hex  mcuboot.hex
drivers/as7341/: CMakeLists.txt  Kconfig  as7341.c
drivers/as7341/h/: as7341.h
drivers/as7341/zephyr/: module.yml
drivers/cap_sensor/: CMakeLists.txt  Kconfig  cap_sensor.c
drivers/cap_sensor/zephyr/: module.yml
drivers/led_slowpwm/: CMakeLists.txt  Kconfig  led_context.h  led_slowpwm.c
drivers/led_slowpwm/zephyr/: module.yml
drivers/pca9632/: CMakeLists.txt  Kconfig  led_context.h  pca9632.c
drivers/pca9632/zephyr/: module.yml
old_code/: hort_settings.c
old_code/headers/: hort_settings.h  pid.h
src/: can_handler.c  hcsr_distance_sensor.c  main.c  pid.c  pwm_control.c  sensor_reading.c  shell_menu.c  status.c
src/headers/: definitions.h  git.h.in  hcsr_distance_sensor.h  pid.h  pwm_control.h  sensor_reading.h  shell_menu.h  status.h
tests/: CMakeLists.txt  prj.conf  testcase.yaml
tests/src/: main.c
